# pawnai-matrix

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  publish.yml
alembic/: env.py
alembic/versions/: 1780ad3ce78d_added_room_configuration_table.py  620ce7c88821_added_room_configuration_field.py  8e929aa6d627_initial_migration.py  a1b2c3d4e5f6_added_bot_configuration_table.py  c1d2e3f4a5b6_added_room_message_table.py  d4e5f6a7b8c9_make_room_expert_nullable.py
config/: sample.config.yaml
config/tasks/: .gitignore  task.agenda.yml
deploy/: pawnai-matrix.service
docker/: Dockerfile  docker-compose.yaml  docker-compose.yml  docker-qdrant.service  pawnai-bob.service
docs/: AUDIO_TRANSCRIPTION_COMPATIBILITY_PLAN.md  CONFIGURATION_STORAGE_SUMMARY.md  UTILS_ORGANIZATION_DIAGRAM.md  UTILS_QUICK_REFERENCE.md  UTILS_REORGANIZATION.md  UTILS_REORGANIZATION_SUMMARY.md  configuration_storage.md  deployment.md  pawn-agent.md  setup.md
pawnai_bob/: __init__.py  __main__.py  app.py  callbacks.py  cli.py  configuration.py  database.py  globals.py  models.py  openai_client.py  room.py  settings.py
pawnai_bob/commands/: __init__.py  conversation_commands.py  expert_commands.py  index_commands.py  room_config_commands.py  system_commands.py  vision_commands.py
pawnai_bob/listeners/: room_listener.py
pawnai_bob/processors/: audio_processor.py  image_processor.py
pawnai_bob/utils/: README.md  __init__.py  chat.py  config.py  decorators.py  document.py
pawnai_matrix/: __init__.py  __main__.py  app.py  callbacks.py  cli.py  configuration.py  database.py  globals.py  models.py  openai_client.py  room.py
pawnai_matrix/commands/: __init__.py  conversation_commands.py  expert_commands.py  index_commands.py  room_config_commands.py  session_commands.py  system_commands.py
pawnai_matrix/listeners/: room_listener.py
pawnai_matrix/processors/: audio_processor.py  tts_processor.py
pawnai_matrix/utils/: README.md  __init__.py  chat.py  config.py  decorators.py
scripts/: import_yaml_config.py  populate_config_defaults.py
tests/: test_chat_utils.py  test_conversation_commands.py  test_free_speak.py  test_openai_client.py
